; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_mm.c_nouveau_mm_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/core/extr_mm.c_nouveau_mm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_mm = type { i64, i32, i32, i64, i32 }
%struct.nouveau_mm_node = type { i32, i32, i64, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nouveau_mm_init(%struct.nouveau_mm* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.nouveau_mm*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.nouveau_mm_node*, align 8
  store %struct.nouveau_mm* %0, %struct.nouveau_mm** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i64, i64* %9, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %28

13:                                               ; preds = %4
  %14 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %15 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %14, i32 0, i32 4
  %16 = call i32 @mutex_init(i32* %15)
  %17 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %18 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %17, i32 0, i32 2
  %19 = call i32 @INIT_LIST_HEAD(i32* %18)
  %20 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %21 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %20, i32 0, i32 1
  %22 = call i32 @INIT_LIST_HEAD(i32* %21)
  %23 = load i64, i64* %9, align 8
  %24 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %25 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %24, i32 0, i32 3
  store i64 %23, i64* %25, align 8
  %26 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %27 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  br label %28

28:                                               ; preds = %13, %4
  %29 = load i32, i32* @GFP_KERNEL, align 4
  %30 = call %struct.nouveau_mm_node* @kzalloc(i32 24, i32 %29)
  store %struct.nouveau_mm_node* %30, %struct.nouveau_mm_node** %10, align 8
  %31 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %32 = icmp ne %struct.nouveau_mm_node* %31, null
  br i1 %32, label %36, label %33

33:                                               ; preds = %28
  %34 = load i32, i32* @ENOMEM, align 4
  %35 = sub nsw i32 0, %34
  store i32 %35, i32* %5, align 4
  br label %80

36:                                               ; preds = %28
  %37 = load i64, i64* %8, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %65

39:                                               ; preds = %36
  %40 = load i64, i64* %7, align 8
  %41 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %42 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %41, i32 0, i32 3
  %43 = load i64, i64* %42, align 8
  %44 = call i64 @roundup(i64 %40, i64 %43)
  %45 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %46 = getelementptr inbounds %struct.nouveau_mm_node, %struct.nouveau_mm_node* %45, i32 0, i32 2
  store i64 %44, i64* %46, align 8
  %47 = load i64, i64* %7, align 8
  %48 = load i64, i64* %8, align 8
  %49 = add nsw i64 %47, %48
  %50 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %51 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %50, i32 0, i32 3
  %52 = load i64, i64* %51, align 8
  %53 = call i32 @rounddown(i64 %49, i64 %52)
  %54 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %55 = getelementptr inbounds %struct.nouveau_mm_node, %struct.nouveau_mm_node* %54, i32 0, i32 3
  store i32 %53, i32* %55, align 8
  %56 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %57 = getelementptr inbounds %struct.nouveau_mm_node, %struct.nouveau_mm_node* %56, i32 0, i32 2
  %58 = load i64, i64* %57, align 8
  %59 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %60 = getelementptr inbounds %struct.nouveau_mm_node, %struct.nouveau_mm_node* %59, i32 0, i32 3
  %61 = load i32, i32* %60, align 8
  %62 = sext i32 %61 to i64
  %63 = sub nsw i64 %62, %58
  %64 = trunc i64 %63 to i32
  store i32 %64, i32* %60, align 8
  br label %65

65:                                               ; preds = %39, %36
  %66 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %67 = getelementptr inbounds %struct.nouveau_mm_node, %struct.nouveau_mm_node* %66, i32 0, i32 1
  %68 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %69 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %68, i32 0, i32 2
  %70 = call i32 @list_add_tail(i32* %67, i32* %69)
  %71 = load %struct.nouveau_mm_node*, %struct.nouveau_mm_node** %10, align 8
  %72 = getelementptr inbounds %struct.nouveau_mm_node, %struct.nouveau_mm_node* %71, i32 0, i32 0
  %73 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %74 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %73, i32 0, i32 1
  %75 = call i32 @list_add_tail(i32* %72, i32* %74)
  %76 = load %struct.nouveau_mm*, %struct.nouveau_mm** %6, align 8
  %77 = getelementptr inbounds %struct.nouveau_mm, %struct.nouveau_mm* %76, i32 0, i32 0
  %78 = load i64, i64* %77, align 8
  %79 = add nsw i64 %78, 1
  store i64 %79, i64* %77, align 8
  store i32 0, i32* %5, align 4
  br label %80

80:                                               ; preds = %65, %33
  %81 = load i32, i32* %5, align 4
  ret i32 %81
}

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local %struct.nouveau_mm_node* @kzalloc(i32, i32) #1

declare dso_local i64 @roundup(i64, i64) #1

declare dso_local i32 @rounddown(i64, i64) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
